# jedify-plugins

./: .gitignore  .mcp.json  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-06-09-descope-signup-auth-flow.md
docs/superpowers/specs/: 2026-06-09-descope-signup-auth-flow-design.md
gateway/: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  wrangler.jsonc
gateway/app/.well-known/oauth-protected-resource/: route.ts
gateway/app/[transport]/: route.ts
gateway/lib/: yaml.ts
gateway/src/: descope-handler.ts  index.ts  mcp-server.ts  mcp.ts
gateway/test/: descope.test.ts  mcp.test.ts  yaml.test.ts
schema-context/: .mcp.json
schema-context/.claude-plugin/: plugin.json
schema-context/skills/schema-context/: SKILL.md  examples.md
server/: README.md  pyproject.toml
server/jedify_lens/: config.py  server.py
server/jedify_lens/connectors/: __init__.py  base.py  ds_types.py  factory.py  postgres_connector.py  schema_types.py  snowflake_connector.py
server/jedify_lens/enrichment/: prompts.py
server/jedify_lens/tools/: export_yaml.py  get_schema.py  list_tables.py  registration.py  sample_data.py
server/tests/: test_callback_validation.py  test_check_registration.py  test_config.py  test_registration_exchange.py  test_registration_pkce.py  test_registration_token.py  test_state.py
skills/schema-context/: REFERENCE.md  SKILL.md  examples.md
