[tool.poetry]
name = "jedify-lens"
version = "0.1.0"
description = "MCP server for data warehouse schema context generation. Connects Claude to Snowflake, Postgres, and Redshift to generate semantic YAML context."
authors = ["Jedify <adi@jedify.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://jedify.com/schema-context"
repository = "https://github.com/jedify-com/skills"
keywords = ["mcp", "schema", "warehouse", "snowflake", "postgres", "context", "sql"]
packages = [{include = "jedify_lens"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = {extras = ["cli"], version = "^1.0"}
pydantic = "^2.0"
pyyaml = "^6.0"
httpx = "^0.27"

# Warehouse connectors — installed on demand via extras
snowflake-connector-python = {version = "^3.0", optional = true, extras = ["pandas"]}
asyncpg = {version = "^0.29", optional = true}
cryptography = {version = "^42.0", optional = true}

[tool.poetry.extras]
snowflake = ["snowflake-connector-python", "cryptography"]
postgres = ["asyncpg"]
all = ["snowflake-connector-python", "cryptography", "asyncpg"]

[tool.poetry.scripts]
jedify-lens = "jedify_lens.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
