[tool.poetry]
name = "jedify-lens"
version = "0.1.0"
description = "MCP server for data warehouse schema context generation. Works with any connected database MCP server (Snowflake, BigQuery, Postgres) to generate semantic YAML context."
authors = ["Jedify <adi@jedify.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://jedify.com/schema-context"
repository = "https://github.com/jedify-com/skills"
keywords = ["mcp", "schema", "warehouse", "snowflake", "bigquery", "postgres", "context", "sql"]
packages = [{include = "jedify_lens"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = {extras = ["cli"], version = "^1.0"}
pydantic = "^2.0"
pyyaml = "^6.0"
httpx = "^0.27"

[tool.poetry.scripts]
jedify-lens = "jedify_lens.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
respx = "^0.21"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
